--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ pyee==12.0.0
 pytest==8.3.4
 pytest-base-url==2.1.0
 pytest-playwright==0.6.2
+python-dotenv==1.0.1
 python-slugify==8.0.4
 PyYAML==6.0.2
 requests==2.32.3
